@@ -1,7 +1,7 @@
 
 // bit patterns for the CP437 font
 
-const byte MAX7219_Dot_Matrix_font_default [256] [8]  = {
+const byte MAX7219_Dot_Matrix_font_default [256] [8]    = {
   { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }, // 0x00
   { 0x7E, 0x81, 0x95, 0xB1, 0xB1, 0x95, 0x81, 0x7E }, // 0x01
   { 0x7E, 0xFF, 0xEB, 0xCF, 0xCF, 0xEB, 0xFF, 0x7E }, // 0x02
@@ -260,7 +260,7 @@ const byte MAX7219_Dot_Matrix_font_default [256] [8]  = {
   { 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 }, // 0xFF
 };  //  end of MAX7219_Dot_Matrix_font
 
-const byte MAX7219_Dot_Matrix_SINCLAIR_font [256] [8]  = {
+const byte MAX7219_Dot_Matrix_SINCLAIR_font [256] [8]    = {
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0x00
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0x01
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0x02
@@ -517,7 +517,264 @@ const byte MAX7219_Dot_Matrix_SINCLAIR_font [256] [8]  = {
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFD
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFE
     {0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFF
-
-
-
 };  //  end of MAX7219_Dot_Matrix_font
+
+const byte MAX7219_Dot_Matrix_6pix_font [256] [5]   =  {
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x00
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x01
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x02
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x03
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x04
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x05
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x06
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x07
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x08
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x09
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0A
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0B
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0C
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0D
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0E
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x0F
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x10
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x11
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x12
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x13
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x14
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x15
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x16
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x17
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x18
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x19
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1A
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1B
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1C
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1D
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1E
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x1F
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x20  
+  {0x00, 0x00, 0x5f, 0x00, 0x00}, // 0x21 !
+  {0x00, 0x07, 0x00, 0x07, 0x00}, // 0x22 "
+  {0x14, 0x7f, 0x14, 0x7f, 0x14}, // 0x23 #
+  {0x24, 0x2a, 0x7f, 0x2a, 0x12}, // 0x2, 0x004 $
+  {0x23, 0x13, 0x08, 0x64, 0x62}, // 0x25 %
+  {0x36, 0x49, 0x55, 0x22, 0x50}, // 0x26 &
+  {0x00, 0x05, 0x03, 0x00, 0x00}, // 0x27 '
+  {0x00, 0x1c, 0x22, 0x41, 0x00}, // 0x28 (
+  {0x00, 0x41, 0x22, 0x1c, 0x00}, // 0x29 )
+  {0x14, 0x08, 0x3e, 0x08, 0x14}, // 0x2a *
+  {0x08, 0x08, 0x3e, 0x08, 0x08}, // 0x2b +
+  {0x00, 0x50, 0x30, 0x00, 0x00}, // 0x2c ,
+  {0x08, 0x08, 0x08, 0x08, 0x08}, // 0x2d -
+  {0x00, 0x60, 0x60, 0x00, 0x00}, // 0x2e .
+  {0x20, 0x10, 0x08, 0x04, 0x02}, // 0x2f /
+  {0x3e, 0x51, 0x49, 0x45, 0x3e}, // 0x30 0
+  {0x00, 0x42, 0x7f, 0x40, 0x00}, // 0x31 1
+  {0x42, 0x61, 0x51, 0x49, 0x46}, // 0x32 2
+  {0x21, 0x41, 0x45, 0x4b, 0x31}, // 0x33 3
+  {0x18, 0x14, 0x12, 0x7f, 0x10}, // 0x34 4
+  {0x27, 0x45, 0x45, 0x45, 0x39}, // 0x35 5
+  {0x3c, 0x4a, 0x49, 0x49, 0x30}, // 0x36 6
+  {0x01, 0x71, 0x09, 0x05, 0x03}, // 0x37 7
+  {0x36, 0x49, 0x49, 0x49, 0x36}, // 0x38 8
+  {0x06, 0x49, 0x49, 0x29, 0x1e}, // 0x39 9
+  {0x00, 0x36, 0x36, 0x00, 0x00}, // 0x3a :
+  {0x00, 0x56, 0x36, 0x00, 0x00}, // 0x3b ;
+  {0x08, 0x14, 0x22, 0x41, 0x00}, // 0x3c <
+  {0x14, 0x14, 0x14, 0x14, 0x14}, // 0x3d =
+  {0x00, 0x41, 0x22, 0x14, 0x08}, // 0x3e >
+  {0x02, 0x01, 0x51, 0x09, 0x06}, // 0x3f ?
+  {0x32, 0x49, 0x79, 0x41, 0x3e}, // 0x40 @
+  {0x7e, 0x11, 0x11, 0x11, 0x7e}, // 0x41 A
+  {0x7f, 0x49, 0x49, 0x49, 0x36}, // 0x42 B
+  {0x3e, 0x41, 0x41, 0x41, 0x22}, // 0x43 C
+  {0x7f, 0x41, 0x41, 0x22, 0x1c}, // 0x44 D
+  {0x7f, 0x49, 0x49, 0x49, 0x41}, // 0x45 E
+  {0x7f, 0x09, 0x09, 0x09, 0x01}, // 0x46 F
+  {0x3e, 0x41, 0x49, 0x49, 0x7a}, // 0x47 G
+  {0x7f, 0x08, 0x08, 0x08, 0x7f}, // 0x48 H
+  {0x00, 0x41, 0x7f, 0x41, 0x00}, // 0x49 I
+  {0x20, 0x40, 0x41, 0x3f, 0x01}, // 0x4a J
+  {0x7f, 0x08, 0x14, 0x22, 0x41}, // 0x4b K
+  {0x7f, 0x40, 0x40, 0x40, 0x40}, // 0x4c L
+  {0x7f, 0x02, 0x0c, 0x02, 0x7f}, // 0x4d M
+  {0x7f, 0x04, 0x08, 0x10, 0x7f}, // 0x4e N
+  {0x3e, 0x41, 0x41, 0x41, 0x3e}, // 0x4f O
+  {0x7f, 0x09, 0x09, 0x09, 0x06}, // 0x50 P
+  {0x3e, 0x41, 0x51, 0x21, 0x5e}, // 0x51 Q
+  {0x7f, 0x09, 0x19, 0x29, 0x46}, // 0x52 R
+  {0x46, 0x49, 0x49, 0x49, 0x31}, // 0x53 S
+  {0x01, 0x01, 0x7f, 0x01, 0x01}, // 0x54 T
+  {0x3f, 0x40, 0x40, 0x40, 0x3f}, // 0x55 U
+  {0x1f, 0x20, 0x40, 0x20, 0x1f}, // 0x56 V
+  {0x3f, 0x40, 0x38, 0x40, 0x3f}, // 0x57 W
+  {0x63, 0x14, 0x08, 0x14, 0x63}, // 0x58 X
+  {0x07, 0x08, 0x70, 0x08, 0x07}, // 0x59 Y
+  {0x61, 0x51, 0x49, 0x45, 0x43}, // 0x5a Z
+  {0x00, 0x7f, 0x41, 0x41, 0x00}, // 0x5b [
+  {0x02, 0x04, 0x08, 0x10, 0x20}, // 0x5c \
+  {0x00, 0x41, 0x41, 0x7f, 0x00}, // 0x5d ]
+  {0x00, 0x41, 0x41, 0x7f, 0x00}, // 0x5d ]
+  {0x04, 0x02, 0x01, 0x02, 0x04}, // 0x5e ^
+  {0x40, 0x40, 0x40, 0x40, 0x40}, // 0x5f _
+  {0x00, 0x01, 0x02, 0x04, 0x00}, // 0x60 `
+  {0x20, 0x54, 0x54, 0x54, 0x78}, // 0x61 a
+  {0x7f, 0x48, 0x44, 0x44, 0x38}, // 0x62 b
+  {0x38, 0x44, 0x44, 0x44, 0x20}, // 0x63 c
+  {0x38, 0x44, 0x44, 0x48, 0x7f}, // 0x64 d
+  {0x38, 0x54, 0x54, 0x54, 0x18}, // 0x65 e
+  {0x08, 0x7e, 0x09, 0x01, 0x02}, // 0x66 f
+  {0x0c, 0x52, 0x52, 0x52, 0x3e}, // 0x67 g
+  {0x7f, 0x08, 0x04, 0x04, 0x78}, // 0x68 h
+  {0x00, 0x44, 0x7d, 0x40, 0x00}, // 0x69 i
+  {0x20, 0x40, 0x44, 0x3d, 0x00}, // 0x6a j 
+  {0x7f, 0x10, 0x28, 0x44, 0x00}, // 0x6b k
+  {0x00, 0x41, 0x7f, 0x40, 0x00}, // 0x6c l
+  {0x7c, 0x04, 0x18, 0x04, 0x78}, // 0x6d m
+  {0x7c, 0x08, 0x04, 0x04, 0x78}, // 0x6e n
+  {0x38, 0x44, 0x44, 0x44, 0x38}, // 0x6f o
+  {0x7c, 0x14, 0x14, 0x14, 0x08}, // 0x70 p
+  {0x08, 0x14, 0x14, 0x18, 0x7c}, // 0x71 q
+  {0x7c, 0x08, 0x04, 0x04, 0x08}, // 0x72 r
+  {0x48, 0x54, 0x54, 0x54, 0x20}, // 0x73 s
+  {0x04, 0x3f, 0x44, 0x40, 0x20}, // 0x74 t
+  {0x3c, 0x40, 0x40, 0x20, 0x7c}, // 0x75 u
+  {0x1c, 0x20, 0x40, 0x20, 0x1c}, // 0x76 v
+  {0x3c, 0x40, 0x30, 0x40, 0x3c}, // 0x77 w
+  {0x44, 0x28, 0x10, 0x28, 0x44}, // 0x78 x
+  {0x0c, 0x50, 0x50, 0x50, 0x3c}, // 0x79 y
+  {0x44, 0x64, 0x54, 0x4c, 0x44}, // 0x7a z
+  {0x00, 0x08, 0x36, 0x41, 0x00}, // 0x7b {
+  {0x00, 0x00, 0x7f, 0x00, 0x00}, // 0x7c |
+  {0x00, 0x41, 0x36, 0x08, 0x00}, // 0x7d }
+  {0x10, 0x08, 0x08, 0x10, 0x08}, // 0x7e ~
+  {0x78, 0x46, 0x41, 0x46, 0x78}, // 0x7f DEL
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x80 128 
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x81 129 
+  {0x38, 0x54, 0x54, 0x54, 0x18}, // 0x82 130 é remplacé par e
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x83 131 
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x84 132 
+  {0x20, 0x54, 0x54, 0x54, 0x78}, // 0x85 133 à remplacé par a
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x86 134
+  {0x38, 0x44, 0x44, 0x44, 0x20}, // 0x87 135 ç remplacé par c
+  {0x38, 0x54, 0x54, 0x54, 0x18}, // 0x88 136 ê remplacé par e
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x89 137 
+  {0x38, 0x54, 0x54, 0x54, 0x18}, // 0x8A 138 è remplacé par e
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x8B 139
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x8C 140
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x8D
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x8E
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x8F
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x90
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x91
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x92
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x93
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x94
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x95
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x96
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x97
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x98
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x99
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9A
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9B
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9C
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9D
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9E
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0x9F
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xA9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAD
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xAF
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xB9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBD
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xBF
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xC9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCD
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xCF
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xD9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDD
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xDF
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xE9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xEA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xEB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xEC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xED
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xEE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xEF
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF0
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF1
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF2
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF3
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF4
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF5
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF6
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF7
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF8
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xF9
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFA
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFB
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFC
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFD
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFE
+  {0x00, 0x00, 0x00, 0x00, 0x00}, // 0xFF
+}; //end of MAX7219_Dot_Matrix_6pix_font
